--- a/styles/base.css
+++ b/styles/base.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@1,600&display=swap');
 html,
 body,
 div,
@@ -86,6 +87,7 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  font-family: 'Montserrat', sans-serif;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -103,7 +105,6 @@ section {
 }
 body {
   line-height: 1;
-  font-family: 'Roboto', sans-serif;
 }
 ol,
 ul {
